pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprSingleScope/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Dumbledore) dst: (tag != Slytherin) conn: All Connections'
        nsx-id: "9199"
    creationTimestamp: null
    name: policy-0
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__Slytherin
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: tag__Dumbledore
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Dumbledore) dst: (tag != Slytherin) conn: All Connections'
        nsx-id: "9199"
    creationTimestamp: null
    name: policy-1
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__Dumbledore
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Slytherin
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Gryffindor) dst: (tag != Hufflepuff) conn: All Connections'
        nsx-id: "9201"
    creationTimestamp: null
    name: policy-2
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__Hufflepuff
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: tag__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Gryffindor) dst: (tag != Hufflepuff) conn: All Connections'
        nsx-id: "9201"
    creationTimestamp: null
    name: policy-3
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Hufflepuff
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Hufflepuff) dst: (tag != Slytherin) conn: All Connections'
        nsx-id: "9203"
    creationTimestamp: null
    name: policy-4
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__Slytherin
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: tag__Hufflepuff
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Hufflepuff) dst: (tag != Slytherin) conn: All Connections'
        nsx-id: "9203"
    creationTimestamp: null
    name: policy-5
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Slytherin
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Slytherin) dst: (tag != Gryffindor) conn: All Connections'
        nsx-id: "9205"
    creationTimestamp: null
    name: policy-6
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Gryffindor
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: "10230"
    creationTimestamp: null
    name: default-deny
    namespace: default
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Network Policy To Allow Access To DNS Server
        nsx-id: none
    creationTimestamp: null
    name: dns-policy
    namespace: default
spec:
    egress:
        - ports:
            - port: 53
              protocol: UDP
          to:
            - namespaceSelector: {}
              podSelector:
                matchLabels:
                    k8s-app: kube-dns
    podSelector: {}
    policyTypes:
        - Egress
